--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ libplen = {path="libplen"}
 unicode-truncate = "0.1.1"
 enum-map = "0.6.2"
 egui-macroquad = "0.12.0"
+pollster = "0.3.0"
 
 [[bin]]
 name = "server"
